--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -1016,7 +1016,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Usuń Archanioły ze swojej armii, jeśli to możliwe.}\n"
-"  \\item \\textcolor{darkcandyapplered}{Zachowaj resztę swojej armii i zasobów do następnego Scenariusz.}\n"
+"  \\item \\textcolor{darkcandyapplered}{Zachowaj resztę swojej armii i zasobów do następnego Scenariusza.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Zresetuj swojego Bohatera zgodnie z normalnymi zasadami kampanii.}\n"
 "\\end{itemize}\n"
 "\n"
