--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -383,7 +383,7 @@ msgstr ""
 "\\textbf{Bonus:} Wybierz jedną z następujących opcji:\n"
 "\\begin{itemize}\n"
 "  \\item Zyskaj Zaklęcie ,,Pogromca''\n"
-"  \\item Zyska Artefakt ,,Zbroja Cudów''\n"
+"  \\item Zyskaj Artefakt ,,Zbroja Cudów''\n"
 "  \\item Wzmocnij Magogi i zyskaj 1 \\svg{valuables}\n"
 "\\end{itemize}\n"
 "\n"
