--- a/translations/random_scenario.tex/pl.po
+++ b/translations/random_scenario.tex/pl.po
@@ -166,7 +166,7 @@ msgid ""
 "Choose one of the following types for your play:\n"
 "\n"
 msgstr ""
-"Wybierz jeden z ponizszych:\n"
+"Wybierz jeden z poniższych:\n"
 "\n"
 
 #. type: multicols
@@ -283,7 +283,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Duża (XL):} 12 Rund, rozdaj każdemu graczowi:\n"
+"\\textbf{Duża (XL):} 16 Rund, rozdaj każdemu graczowi:\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Początkowy (I) Kafelek Mapy\n"
 "  \\item 2 × Daleki (II-III) Kafelek Mapy\n"
