--- a/translations/the_fractured_kingdoms.tex/pl.po
+++ b/translations/the_fractured_kingdoms.tex/pl.po
@@ -252,7 +252,7 @@ msgid ""
 msgstr ""
 "\\textbf{4. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Do końca gry zingoruj wszystkie żółte granice na Początkowych Kafelkach Mapy.\n"
+"  \\item Do końca gry zignoruj wszystkie żółte granice na Początkowych Kafelkach Mapy.\n"
 "\\end{itemize}\n"
 "\\textbf{6., 9. i 12. Runda:}\n"
 "\\begin{itemize}\n"
