--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -217,7 +217,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\textit{Dawno temu zbudowano potężną fortecę, aby pomieścić fantastycznych i zabójczych Tytanów.\n"
-"  Nikomu nie udało się wejśc do środka i wrócić, by opowiedzieć o tym.\n"
+"  Nikomu nie udało się wejść do środka i wrócić, by opowiedzieć o tym.\n"
 "  Teraz krążą plotki o śmierci strażników i niesamowitej ilości skarbów, w tym potencjalnie najlepszego łuku na świecie.\\\\\n"
 "  Jeśli ta legenda o pustej fortecy jest prawdziwa, nadszedł czas na wykopaliska.\\\\\n"
 "  Ale na razie ty i twoi sojusznicy musicie znaleźć klucze rozsiane po Antagarich, aby otworzyć bramę do Twierdzy Tytanów.\n"
