--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -277,7 +277,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Dla Scenariusza trzyoosobowego:}\n"
+"\\textbf{Dla Scenariusza trzyosobowego:}\n"
 "\\begin{itemize}\n"
 "  \\item 3 × Początkowy (I) Kafelek Mapy\n"
 "  \\item 3 × Bliski (IV--V) Kafelek Mapy\n"
