--- a/translations/emerald_island.tex/pl.po
+++ b/translations/emerald_island.tex/pl.po
@@ -344,7 +344,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 5.:}\n"
+"\\textbf{5. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Zyskaj nagrodę jednego Pola z Czarną Kostką.\n"
 "\\end{itemize}\n"
