--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -344,7 +344,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Podziel Talię Artefaktów według rzadkości na 3 osobne Talie (Słabe, Mocne i Relikty). Gracz może zdobywać tylko Słabe Artefakty na Początkowych lub Dalekich Kafelkach, Słabe lub Mocnej Artefakty na Bliskich Kafelkach, oraz Mocne lub Relikty na Centralnych Kafelkach.\n"
+"  \\item Podziel Talię Artefaktów według rzadkości na 3 osobne Talie (Słabe, Mocne i Relikty). Gracz może zdobywać tylko Słabe Artefakty na Początkowych lub Dalekich Kafelkach, Słabe lub Mocne Artefakty na Bliskich Kafelkach, oraz Mocne lub Relikty na Centralnych Kafelkach.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -408,7 +408,7 @@ msgstr ""
 "  \\begin{enumerate}[leftmargin=15pt]\n"
 "    \\item \\textbf{[Oczyszczenie]} Gracz otrzymuje jedną z korzyści, w zależności od liczby odwiedzonych Obelisków:\n"
 "    \\begin{enumerate}\n"
-"      \\item \\textbf{[1. Obelisk]} Zyskujesz Bohatera Pomocnizego. Umieść jego figurkę na tym Polu. Jeśli już masz Bohatera Pomocniczego, zyskaj 6 \\svg{gold}. Następnie wybierz wrogiego gracza, aby odrzucił 1 losową Kartę ze swojej ręki.\n"
+"      \\item \\textbf{[1. Obelisk]} Zyskujesz Bohatera Pomocniczego. Umieść jego figurkę na tym Polu. Jeśli już masz Bohatera Pomocniczego, zyskaj 6 \\svg{gold}. Następnie wybierz wrogiego gracza, aby odrzucił 1 losową Kartę ze swojej ręki.\n"
 "      \\item \\textbf{[2. Obelisk]} Zwiększ swoje dochody \\svg{gold}, \\svg{building_materials}, lub \\svg{valuables} o 1 krok.\n"
 "      \\item \\textbf{[3. Obelisk]} Rzuć 2 \\svg{treasure} i rozpatrz 1; następnie otrzymaj \\svg{morale_positive} i \\svg{movement}.\n"
 "      \\item \\textbf{[4. Obelisk]} Usuń do 4 Kart ze swojej ręki, z wyjątkiem Kart Statystyk; następnie przeszukaj każdą odpowiednią Talię i wybierz Kartę, którą dodasz do swojej ręki.\n"
@@ -421,10 +421,10 @@ msgstr ""
 "      \\item *\\golden\\: Zyskaj 18 \\svg{gold}, 9 \\svg{building_materials} i 3 \\svg{valuables}. Dodatkowo, \\textbf{Przeszukaj (2)} Talię Reliktów. Jeśli Karta Jednostki była na stronie Grupy, \\textbf{Przeszukaj (2)} Talię Jednostek \\azure\\; możesz Zrekrutować jedną z tych Jednostek za połowę kosztu (zaokrąglonego w dół).\n"
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
-"  \\item Gracz, który wybierze \\textbf{Ofiarę} przy Obelisku, zyskuje tytuł ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}''. Umieść czerwoną Kostkę Frakcji na portrecie swojego Bohatera, aby oznaczyć ten efekt. \\textcolor{darkcandyapplered}{Rycerz Krwi} nigdy nie może wybrać opcji \\textbf{Oczyszczenia} podczas Odwiedzania Obelisku.\n"
-"  \\item Gracz, który wybiera \\textbf{Oczyszczenie} przy Obelisku, zyskuje tytuł ,,\\textcolor{cobalt}{Rycerza Graala}''. Umieść niebieską Kostkę Frakcji na portrecie swojego Bohatera, aby oznaczyć ten efekt. \\textcolor{cobalt}{Rycerz Graala} nigdy nie może wybrać opcji \\textbf{Ofiary} podczas Odwiedzania Obelisku.\n"
+"  \\item Gracz, który wybierze \\textbf{Ofiarę} przy Obelisku, zyskuje tytuł ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}''. Umieść czerwoną Kostkę Frakcji na portrecie swojego Bohatera, aby oznaczyć ten efekt. \\textcolor{darkcandyapplered}{Rycerz Krwi} nigdy nie może wybrać opcji \\textbf{Oczyszczenia} podczas odwiedzania Obelisku.\n"
+"  \\item Gracz, który wybiera \\textbf{Oczyszczenie} przy Obelisku, zyskuje tytuł ,,\\textcolor{cobalt}{Rycerza Graala}''. Umieść niebieską Kostkę Frakcji na portrecie swojego Bohatera, aby oznaczyć ten efekt. \\textcolor{cobalt}{Rycerz Graala} nigdy nie może wybrać opcji \\textbf{Ofiary} podczas odwiedzania Obelisku.\n"
 "  \\item Kiedy gracz wybiera \\textbf{Ofiarę} przy Obelisku, umieść liczbę Kostek Frakcji równą liczbie razy, kiedy gracz składał \\textbf{Ofiarę}, na karcie Jednostki i na polu Obelisku. Na przykład jeśli gracz składa ofiarę po raz drugi, umieść 2 Kostki Frakcji na karcie Jednostki i 2 Kostki Frakcji na polu Obelisku.\n"
-"  \\item Gracz posiadający tytuł ,,\\textcolor{cobalt}{Rycerza Graala}'' może po Odwiedzeniu Obelisku Zrekrutować wrogą Jednostkę ofiarowaną przy tym Obelisku za połowę kosztu (zaokrąglonego w dół); jeśli została ofiarowany Grupa, gracz może Zrekrutować Garstkę.\n"
+"  \\item Gracz posiadający tytuł ,,\\textcolor{cobalt}{Rycerza Graala}'' może po odwiedzeniu Obelisku zrekrutować wrogą Jednostkę ofiarowaną przy tym Obelisku za połowę kosztu (zaokrąglonego w dół); jeśli została ofiarowana Grupa, gracz może zrekrutować Garstkę.\n"
 "  \\item Jeśli Zrekrutowana przy Obelisku Jednostka zostanie pokonana, usuń ją z gry.\n"
 "  \\item Gracz, który nie posiada tytułu lub posiada tytuł ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}'', nie może używać Karty Dyplomacji. Jeśli gracz, który nie posiada tytułu lub posiada tytuł ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}'', dobierze Kartę Dyplomacji, może ją pokazać innym graczom, następnie odrzucić i wylosować nową Kartę Zdolności.\n"
 "  \\item Gracz posiadający tytuł ,,\\textcolor{cobalt}{Rycerza Graala}'' nie może używać Karty Dyplomacji do rekrutacji \\azure\\ Jednostek Neutralnych.\n"
