--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -853,7 +853,7 @@ msgid ""
 msgstr ""
 "Rion przegalopował obok nich, skupiony na zbadaniu ocalałego Obelisku.\n"
 "Jak poprzednio, chciał położyć rękę na zimnym kamieniu, ale cofnął ją przed dotknięciem.\\\\\n"
-"\\dialog{Jest aktywny! -- powiedział podekscytoway\n"
+"\\dialog{Jest aktywny! -- powiedział podekscytowany\n"
 "-- To może być nasz przełom.\n"
 "Przy odrobinie szczęścia zabierze nas prosto do twierdzy wroga.}\n"
 "\n"
