--- a/translations/inferno_steadwicks_fall.tex/pl.po
+++ b/translations/inferno_steadwicks_fall.tex/pl.po
@@ -221,7 +221,7 @@ msgid ""
 "\\textbf{Starting Units:}\n"
 "\n"
 msgstr ""
-"\\textbf{Jednostki początkowe:}\n"
+"\\textbf{Jednostki Początkowe:}\n"
 "\n"
 
 #. type: multicols
@@ -410,7 +410,7 @@ msgstr ""
 "    \\item \\textbf{Talia AI:}\n"
 "    \\begin{itemize}\n"
 "        \\item 5 × Karta Mocy \\svg{might}\n"
-"        \\item 1 × Karta Magi \\svg{magic}\n"
+"        \\item 1 × Karta Magii \\svg{magic}\n"
 "        \\item 3 × Karta Umiejętności \\svg{skill}\n"
 "    \\end{itemize}\n"
 "    \\item \\textbf{Zaklęcia:}\n"
@@ -651,7 +651,7 @@ msgid ""
 msgstr ""
 "\\textbf{2. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj fragment ,,Wiadomości'.'\n"
+"  \\item Przeczytaj fragment ,,Wiadomości''.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -802,7 +802,7 @@ msgstr ""
 "    \\item Granice na Początkowym Kafelku Mapy S3 nie mogą być przekraczane w żaden sposób, dopóki\n"
 "      wszystkie Wrogie Osady (F3, F10, \\#F1) nie zostaną pokonane.\n"
 "    \\item Pokonanie Szarżujących Bohaterów przynosi 2 \\svg{valuables}.\n"
-"    \\item Obeliski dają 1 \\svg{valuables} i pełnią funkcję ,,Wrót Wymiarów'' (tylko jeśli masz zbudowe ,,Wrota Wymiarów'' w swoim Mieście).\n"
+"    \\item Obeliski dają 1 \\svg{valuables} i pełnią funkcję ,,Wrót Wymiarów'' (tylko jeśli masz zbudowane ,,Wrota Wymiarów'' w swoim Mieście).\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -861,7 +861,7 @@ msgid ""
 "\n"
 msgstr ""
 "Otrzymałeś właśnie raport dotyczący postępów wojsk Królowej Katarzyny.\n"
-"Siły z Nighonu i Eeofolu starają się opóźnić jej marsz, ale nie będą jej w stanie zatrzymać na dłużej niż dwa, trzy miesiące.''\n"
+"Siły z Nighonu i Eeofolu starają się opóźnić jej marsz, ale nie będą jej w stanie zatrzymać na dłużej niż dwa, trzy miesiące.\n"
 "\n"
 
 #. type: multicols*
