--- a/translations/emerald_island.tex/pl.po
+++ b/translations/emerald_island.tex/pl.po
@@ -384,11 +384,11 @@ msgid ""
 "    \\end{itemize}\n"
 "\n"
 msgstr ""
-"    \\item Możesz przekazywać jednostki innemu graczowi, nawet poza swoją turą, jeśli jeden z twoich Bohaterów jest:\n"
+"    \\item Możesz przekazywać Jednostki innemu graczowi, nawet poza swoją turą, jeśli jeden z twoich Bohaterów jest:\n"
 "    \\begin{itemize}\n"
-"        \\item Na tym samym kafelku mapy co bohater innego gracza.\n"
-"        \\item W mieście innego gracza.\n"
-"        \\item Obok bohatera innego gracza.\n"
+"        \\item Na tym samym Kafelku Mapy co Bohater innego gracza.\n"
+"        \\item W Mieście innego gracza.\n"
+"        \\item Obok Bohatera innego gracza.\n"
 "    \\end{itemize}\n"
 "\n"
 
@@ -399,7 +399,7 @@ msgid ""
 "    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your Faction's Unit pool (even if another player has one or more of your Units). This includes Units you've previously given to another player.\n"
 "\n"
 msgstr ""
-"    \\item Jeśli nie masz jednostek w swojej talii jednostek (po walce lub jeśli nie zachowasz co najmniej jednej jednostki), zwróć wszystkie swoje jednostki do puli jednostek twojej frakcji (nawet jeśli inny gracz ma jedną lub więcej twoich jednostek). Obejmuje to jednostki, które wcześniej przekazałeś innemu graczowi.\n"
+"    \\item Jeśli nie masz Jednostek w swojej Talii Jednostek (po Walce lub jeśli nie zachowasz co najmniej jednej Jednostki), zwróć wszystkie swoje Jednostki do puli Jednostek twojej Frakcji (nawet jeśli inny gracz ma jedną lub więcej twoich Jednostek). Obejmuje to Jednostki, które wcześniej przekazałeś innemu graczowi.\n"
 "\n"
 
 #. type: multicols
@@ -409,7 +409,7 @@ msgid ""
 "    \\item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.\n"
 "\n"
 msgstr ""
-"    \\item Będąc w mieście innego gracza, możesz rekrutować lub wzmacniać ich jednostki, albo dla nich, albo dla siebie. Potrzebujesz na to zgody innego gracza. Odpowiednie Siedliska lub Cytadela muszą być zbudowane.\n"
+"    \\item Będąc w Mieście innego gracza, możesz rekrutować lub wzmacniać ich Jednostki, albo dla nich, albo dla siebie. Potrzebujesz na to zgody innego gracza. Odpowiednie Siedliska lub Cytadela muszą być zbudowane.\n"
 "\n"
 
 #. type: multicols
@@ -429,7 +429,7 @@ msgid ""
 "    \\item The first time you reach Level IV, gain your second specialty.\n"
 "\n"
 msgstr ""
-"    \\item Przy pierwszym osiągnięciu poziomu IV, zdobądź swoją drugą specjalizację.\n"
+"    \\item Przy pierwszym osiągnięciu Poziomu IV, zdobądź swoją drugą specjalizację.\n"
 "\n"
 
 #. type: multicols
@@ -439,7 +439,7 @@ msgid ""
 "    \\item When you reach Level IV, move your Token on the Level tracker to Level III.\n"
 "\n"
 msgstr ""
-"    \\item Po osiągnięciu poziomu IV, przenieś swoją kostkę na liczniku poziomów na poziom III.\n"
+"    \\item Po osiągnięciu Poziomu IV, przenieś swoją Kostkę na liczniku poziomów na Poziom III.\n"
 "\n"
 
 #. type: multicols
@@ -456,7 +456,7 @@ msgid ""
 msgstr ""
 "    \\item Dodatkowo, żaden gracz nie może:\n"
 "    \\begin{itemize}\n"
-"        \\item Atakować innych bohaterów.\n"
+"        \\item Atakować innych Bohaterów.\n"
 "        \\item Przejąć Kopalni lub Osady, która jest już Oflagowana.\n"
 "    \\end{itemize}\n"
 "\\end{itemize}\n"
