--- a/translations/dragoncurse_castle.tex/pl.po
+++ b/translations/dragoncurse_castle.tex/pl.po
@@ -219,7 +219,7 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Garstka \\bronze\\ Jednostek o najniższym koszcie rekrutacji\n"
+"  \\item 2 × Garstka \\bronze\\ Jednostek o najniższym koszcie Rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
