--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -286,7 +286,7 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
-"\\textit{Południowo-zachodnie wybrzeże Erathii zasiedlone jest przez dużą populację elfów.\n"
+"\\textit{Południowo-wschodnie wybrzeże Erathii zasiedlone jest przez dużą populację elfów.\n"
 "Zielone i złote smoki, które także zamieszkują te ziemie, znacznie powiększają ich potęgę militarną.\n"
 "Zanim podbijemy wymienione rejony i otworzymy sobie drogę do Steadwick, musimy wybić do nogi wszystkie smoki.\n"
 "Nasi sprzymierzeńcy, wojownicy Kreegan z królestwa Eofol, poprosili o zaszczyt wykonania tej misji.\n"
