--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -175,8 +175,8 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item Grupa \\svg{bronze} Jednostek o \\textit{najniższym} koszcie rekrutacji\n"
-"  \\item Garstka \\svg{bronze} Jednostek o \\textit{najwyższym} koszcie rekrutacji\n"
+"  \\item Grupa \\svg{bronze} Jednostek o \\textit{najniższym} koszcie Rekrutacji\n"
+"  \\item Garstka \\svg{bronze} Jednostek o \\textit{najwyższym} koszcie Rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
