--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -71,8 +71,8 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item Grupa \\svg{bronze} Jednostek o \\textit{najniższym} koszcie rekrutacji\n"
-"  \\item Garstka \\svg{bronze} Jednostek o \\textit{najwyższym} koszcie rekrutacji\n"
+"  \\item Grupa \\svg{bronze} Jednostek o \\textit{najniższym} koszcie Rekrutacji\n"
+"  \\item Garstka \\svg{bronze} Jednostek o \\textit{najwyższym} koszcie Rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -717,7 +717,7 @@ msgstr ""
 "{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
 "\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}"
 "{XXXX} \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Łatwy}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Średni}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normalny}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Trudny}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Niemożliwy}}\\\\ "
 "\\lightcell[2.5]{No additional\\\\changes} & \\lightcell[2.5]"
@@ -822,7 +822,7 @@ msgstr ""
 "{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
 "\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}"
 "{XXXX} \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Łatwy}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Średni}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normalny}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Trudny}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Niemożliwy}}\\\\ "
 "\\lightcell[1.6]{No additional\\\\changes} & \\lightcell[1.6]"
