--- a/translations/close_to_enemies.tex/pl.po
+++ b/translations/close_to_enemies.tex/pl.po
@@ -179,7 +179,7 @@ msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Close to Enemies}{\\images/"
 "ballistics.png}"
 msgstr ""
-"\\addscenariosection{1}{Scenariusz Kooperacyjny}{Blisko Wrogów}{\\images/"
+"\\addscenariosection{1}{Scenariusz Kooperacyjny}{Wrogowie u bram}{\\images/"
 "ballistics.png}"
 
 #. type: multicols
@@ -456,7 +456,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Wszyscy gracze odkrywają swoje \\textit{Kafelki Nemezis} (Dalekie (II--III) Kafelki Mapy zawierające Osady, które pasują do terenu ich Miasta). Te Kafelki mogą być odkryte za darmo.\n"
 "\\end{itemize}\n"
-"\\textbf{\\nth{2} Runda:}\n"
+"\\textbf{2. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Pierwsza fala armii Wrogich Klanów atakuje wszystkie Miasta (patrz sekcja poniżej).\n"
 "  \\item Po obronie swojego Miasta każdy gracz może zrekrutować Bohatera Pomocniczego za 5~\\svg{gold} podczas tej Rundy. Nadal wymaga to zużycia Żetonu Populacji.\n"
