--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -286,7 +286,7 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
-"\\textit{Południowo-zachodnie wybrzeże Erathii zasiedlone jest przez dużą populację elfów.\n"
+"\\textit{Południowo-wschodnie wybrzeże Erathii zasiedlone jest przez dużą populację elfów.\n"
 "Zielone i złote smoki, które także zamieszkują te ziemie, znacznie powiększają ich potęgę militarną.\n"
 "Zanim podbijemy wymienione rejony i otworzymy sobie drogę do Steadwick, musimy wybić do nogi wszystkie smoki.\n"
 "Nasi sprzymierzeńcy, wojownicy Kreegan z królestwa Eofol, poprosili o zaszczyt wykonania tej misji.\n"
@@ -349,7 +349,7 @@ msgid ""
 "\\textbf{Starting Units:}\n"
 "\n"
 msgstr ""
-"\\textbf{Jednostki początkowe:}\n"
+"\\textbf{Jednostki Początkowe:}\n"
 "\n"
 
 #. type: multicols*
@@ -383,7 +383,7 @@ msgstr ""
 "\\textbf{Bonus:} Wybierz jedną z następujących opcji:\n"
 "\\begin{itemize}\n"
 "  \\item Zyskaj Zaklęcie ,,Pogromca''\n"
-"  \\item Zyska Artefakt ,,Zbroja Cudów''\n"
+"  \\item Zyskaj Artefakt ,,Zbroja Cudów''\n"
 "  \\item Wzmocnij Magogi i zyskaj 1 \\svg{valuables}\n"
 "\\end{itemize}\n"
 "\n"
