--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -175,8 +175,8 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item Grupa \\svg{bronze} Jednostek o \\textit{najniższym} koszcie rekrutacji\n"
-"  \\item Garstka \\svg{bronze} Jednostek o \\textit{najwyższym} koszcie rekrutacji\n"
+"  \\item Grupa \\svg{bronze} Jednostek o \\textit{najniższym} koszcie Rekrutacji\n"
+"  \\item Garstka \\svg{bronze} Jednostek o \\textit{najwyższym} koszcie Rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -262,7 +262,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item 2 × Początkowy (I) Kafelek Mapy\n"
 "  \\item 4 × Daleki (II--III) Kafelek Mapy\n"
-"  \\item 4 × Bliski (IV-V) Kafelek Mapy z Obeliskiem\n"
+"  \\item 4 × Bliski (IV--V) Kafelek Mapy z Obeliskiem\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -554,7 +554,7 @@ msgstr ""
 "  \\item Walka z wrogimi armiami przez więcej niż jedną Rundę Walki nie kosztuje \\svg{movement}.\n"
 "  \\item Podczas Walki z wrogą armią Bohater może wycofać się, gdy ma zostać aktywowana dowolna Jednostka jego armii.\n"
 "    Wycofujący się główny Bohater traci wszystkie pozostałe Punkty Ruchu i wraca do wybranego przez siebie sojuszniczego Miasta albo Osady, zachowując wszystkie pozostałe Jednostki.\n"
-"  \\item Wycofujący się Pomocniczy Bohaterowie są usuwani z gry, ale ich pozostałe Jednostki są zachowane.\n"
+"  \\item Wycofujący się Bohaterowie Pomocniczy są usuwani z gry, ale ich pozostałe Jednostki są zachowane.\n"
 "  \\item Zabite wrogie Jednostki nie odradzają się.\n"
 "\\end{itemize}\n"
 "\n"
