--- a/translations/stand_united.tex/pl.po
+++ b/translations/stand_united.tex/pl.po
@@ -203,7 +203,7 @@ msgid ""
 "\\textbf{Author:} NeuroN\n"
 "\n"
 msgstr ""
-"\\textbf{Autor:} Neuron\n"
+"\\textbf{Autor:} NeuroN\n"
 "\n"
 
 #. type: multicols
@@ -325,7 +325,7 @@ msgid ""
 "\\textbf{Enemy Deck:} 6 × Might Card, 4 × Magic Card, 4 × Skill Card\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Wroga:} 6 × Karty Mocy, 4 × Karty Magii, 4 × Karta Umiejętności\n"
+"\\textbf{Talia Wroga:} 6 × Karta Mocy, 4 × Karta Magii, 4 × Karta Umiejętności\n"
 "\n"
 
 #. type: multicols
@@ -424,7 +424,7 @@ msgstr ""
 "  \\item Walki Poziomu VII nie można pominąć przez Dyplomację ani w inny sposób.\n"
 "  \\item Gracze mogą użyć swojego Żetonu Budowy, aby handlować z jednym wybranym graczem. Obaj gracze mogą swobodnie wymieniać się Zasobami oraz wymieniać Artefakty lub Zaklęcia z ręki, tak jakby ich Bohaterowie stali obok siebie.\n"
 "  \\item Podczas gry gracze tworzą wspólną armię. Każdy gracz może wystawiać Jednostki ze wspólnej armii podczas Walki (zdolności \\svg{map} wspólnych Jednostek mogą być używane w każdej Rundzie tylko przez jednego gracza).\n"
-"  \\item Po oflagowaniu Obelisku, odrzuć wierzchnią Kartę z każdej talii Neutralnych Jednostek z wyjątkiem \\azure\\. Możesz zrekrutować jedną z tych Jednostek. Jednostki zrekrutowane w ten sposób trafiają do wspólnej armii.\n"
+"  \\item Po oflagowaniu Obelisku, odrzuć wierzchnią Kartę z każdej talii Neutralnych Jednostek z wyjątkiem \\azure{}. Możesz zrekrutować jedną z tych Jednostek. Jednostki zrekrutowane w ten sposób trafiają do wspólnej armii.\n"
 "  \\item Podczas Walki w Smoczej Utopii jedna z Neutralnych \\azure\\ Jednostek zawsze jest Błękitnym Smokiem, a Neutralna armia używa Talii AI. Przetasuj Talię AI i Talię Zaklęć AI po zakończeniu Walki.\n"
 "  \\item Po wygraniu Walki w Smoczej Utopii nie umieszczaj na polu Kostki Frakcji. Zwycięski gracz umieszcza jedną ze swoich ocalałych Jednostek Frakcji we wspólnej armii i może rozdzielić pozostałe Zasoby między innych graczy, po czym ten gracz zostaje usunięty z gry.\n"
 "\\end{itemize}\n"
@@ -441,6 +441,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{center}\n"
+"  \\vspace*{3em}\n"
 "  \\includegraphics[width=0.7\\linewidth]{\\maps/stand_united_2p.png}\n"
 "  \\captionof{figure}{\\footnotesize\\textbf{SCENARIUSZ 2-OSOBOWY}}\n"
 "\\end{center}\n"
