--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -634,7 +634,7 @@ msgid ""
 "\n"
 msgstr ""
 "Katarzyna skrzyżowała ramiona i oparła się o łęk siodła, spoglądając na pustkowia, do których ich zwabiono.\n"
-"Archanioły udały się na zwiad, pozostawiajac skromne siły które zdołała zebrać. Zastanawiała się, czy aby na pewno słusznie postąpiła, każąc im odlecieć.\n"
+"Archanioły udały się na zwiad, pozostawiając skromne siły, które zdołała zebrać. Zastanawiała się, czy aby na pewno słusznie postąpiła, każąc im odlecieć.\n"
 "Wroga twierdza wciąż pozostawała nieodnaleziona. Odszukanie jej zajmie sporo czasu, a to nieprzyjazne pustkowie nie ułatwi im zadania.\n"
 "\n"
 
@@ -853,7 +853,7 @@ msgid ""
 msgstr ""
 "Rion przegalopował obok nich, skupiony na zbadaniu ocalałego Obelisku.\n"
 "Jak poprzednio, chciał położyć rękę na zimnym kamieniu, ale cofnął ją przed dotknięciem.\\\\\n"
-"\\dialog{Jest aktywny! -- powiedział podekscytoway\n"
+"\\dialog{Jest aktywny! -- powiedział podekscytowany\n"
 "-- To może być nasz przełom.\n"
 "Przy odrobinie szczęścia zabierze nas prosto do twierdzy wroga.}\n"
 "\n"
@@ -1016,7 +1016,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Usuń Archanioły ze swojej armii, jeśli to możliwe.}\n"
-"  \\item \\textcolor{darkcandyapplered}{Zachowaj resztę swojej armii i zasobów do następnego Scenariusz.}\n"
+"  \\item \\textcolor{darkcandyapplered}{Zachowaj resztę swojej armii i zasobów do następnego Scenariusza.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Zresetuj swojego Bohatera zgodnie z normalnymi zasadami kampanii.}\n"
 "\\end{itemize}\n"
 "\n"
