--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -228,7 +228,7 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Garstka \\bronze\\ Jednostek o \\textbf{najwyższym} koszcie rekrutacji\n"
+"  \\item 2 × Garstka \\bronze\\ Jednostek o \\textbf{najwyższym} koszcie Rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -277,7 +277,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Dla Scenariusza trzyoosobowego:}\n"
+"\\textbf{Dla Scenariusza trzyosobowego:}\n"
 "\\begin{itemize}\n"
 "  \\item 3 × Początkowy (I) Kafelek Mapy\n"
 "  \\item 3 × Bliski (IV--V) Kafelek Mapy\n"
