--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -24,11 +24,7 @@ This Scenario plays out over 13 Rounds.
   \item A Few chosen \bronze\ Units
 \end{itemize}
 
-\textbf{Town Buildings:}
-\begin{itemize}
-  \item \bronze\ Dwelling
-  \item Each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
-\end{itemize}
+\textbf{Town Buildings:} \bronze\ Dwelling, each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 
 \textbf{Map Tile Pool:} Each player takes 3 Far (II–III) Map Tiles.
 
@@ -43,6 +39,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
 \end{itemize}
 
+\columnbreak
 \textbf{Additionally, for 4 players:}
 \begin{itemize}
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
