--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -24,7 +24,11 @@ This Scenario plays out over 13 Rounds.
   \item A Few chosen \bronze\ Units
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ Dwelling, each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
+\textbf{Town Buildings:}
+\begin{itemize}
+  \item \bronze\ Dwelling
+  \item each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
+\end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes 3 Far (II–III) Map Tiles.
 
@@ -33,7 +37,6 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 
 \begin{itemize}
   \item P × Starting (I) Map Tile
-
   \item 2P × Near (IV–V) Map Tiles
   \item P × Center (VI–VII) Map Tile
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
