--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -27,7 +27,7 @@ This Scenario plays out over 13 Rounds.
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \bronze\ Dwelling
-  \item each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
+  \item Each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes 3 Far (II–III) Map Tiles.
@@ -110,7 +110,7 @@ If no one controls a Dragon Utopia, all players lose.
   \includegraphics[width=0.85\linewidth]{\maps/dragon-valley-3p.png}
   \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
   \vspace*{\fill}
-  \includegraphics[width=1.15\linewidth]{\maps/dragon-valley-4p.png}
+  \hspace*{-2.5em}\includegraphics[width=1.15\linewidth]{\maps/dragon-valley-4p.png}
   \captionof{figure}{\textbf{4-PLAYER SCENARIO}}
 \end{center}
 
