--- a/translations/inferno_steadwicks_fall.tex/fr.po
+++ b/translations/inferno_steadwicks_fall.tex/fr.po
@@ -313,7 +313,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, \\silver\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Bâtiments de Départ :} Demeure \\bronze{}, Demeure \\silver\\ \n"
+"\\textbf{Bâtiments de Départ :} Demeures \\bronze{} et \\silver\\\n"
 "\n"
 
 #. type: multicols*
@@ -329,11 +329,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Bonus:} Choisissez une des options:\n"
+"\\textbf{Bonus:} Choisissez une des options pour votre main:\n"
 "\\begin{itemize}\n"
-"  \\item Ajoutez un Groupe de Harpies à votre main.\n"
-"  \\item Ajoutez un Groupe de Magogs à vote de main.\n"
-"  \\item Ajoutez un Chariot de Munitions à votre main.\n"
+"  \\item Ajoutez un Groupe de Harpies.\n"
+"  \\item Ajoutez un Groupe de Magogs.\n"
+"  \\item Ajoutez un Chariot de Munitions.\n"
 "  \\item Fouillez (4) le Deck de Sort.\n"
 "\\end{itemize}\n"
 "\n"
