--- a/translations/inferno_steadwicks_fall.tex/fr.po
+++ b/translations/inferno_steadwicks_fall.tex/fr.po
@@ -329,7 +329,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Bonus:} Choisissez une des options pour votre main:\n"
+"\\textbf{Bonus:} Choisissez une des options:\n"
 "\\begin{itemize}\n"
 "  \\item Ajoutez un Groupe de Harpies.\n"
 "  \\item Ajoutez un Groupe de Magogs.\n"
