--- a/translations/inferno_steadwicks_fall.tex/fr.po
+++ b/translations/inferno_steadwicks_fall.tex/fr.po
@@ -477,7 +477,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{3 × Tuiles Lointaines (II--III)\n"
+"\\textbf{3 × Tuiles Lointaines (II--III)}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Château (F3)\n"
 "  \\item 1 × Rempart (F10)\n"
