Move up, Général Kendal

--- a/translations/inferno_steadwicks_fall.tex/fr.po
+++ b/translations/inferno_steadwicks_fall.tex/fr.po
@@ -370,6 +370,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\vspace*{-0.5em}\n"
 "\\textbf{Général Kendal (Château):}\n"
 "\\begin{itemize}\n"
 "    \\item \\textbf{Armée:}\n"
