--- a/translations/inferno_deal_with_the_devil.tex/fr.po
+++ b/translations/inferno_deal_with_the_devil.tex/fr.po
@@ -709,9 +709,9 @@ msgstr ""
 "    Ennemis sur chacune de leurs Mines.\n"
 "  \\item Vos Murs, Porte et Tourelle a Kleesive sont reconstruits après chaque combat.\n"
 "  \\item Les Unités Ennemies \\svg{unit_flying} voleront au dessus des Murs et Porte pour attaquer vos Unités si possible.\n"
-"  \\item LEs Unités Ennemies \\svg{unit_ranged} attaqueront toujours la Tourelle quand il n'y aura plus d'autres Unités \\svg{unit_ranged} à attaquer.\n"
-"  \\item Enemy Units will always attack your Units if possible. Only when that is not possible, then the Gate,\n"
-"    puis les Murs seront attaqués.\n"
+"  \\item Les Unités Ennemies \\svg{unit_ranged} attaqueront toujours la Tourelle quand il n'y aura plus d'autres Unités \\svg{unit_ranged} à attaquer.\n"
+"  \\item Les Unités Ennemies attaqueront toujours vos Unités si possible. Si cela n'est pas possible, elles attaquent la Porte,\n"
+"    puis les Murs.\n"
 "  \\item Durant une Combat avec l'IA, considérez les Artefact comme des Compétences pour les Cartes Capacités.\n"
 "    La «Lame Ardente» s'utilisera en attaque et en riposte.\n"
 "    Elle se s'utilise pas en attaquant les Murs ou Porte et reste en effet sur l'Unité.\n"
@@ -815,7 +815,7 @@ msgid ""
 "We have the advantage.\n"
 "\n"
 msgstr ""
-"LA Reine Catherine Ironfist refuse notre demande de rançon et elle amasse une armée pour une opération de sauvetage.\n"
+"La Reine Catherine Ironfist refuse notre demande de rançon et elle amasse une armée pour une opération de sauvetage.\n"
 "Clan Kreelah, préparez nos défenses!\n"
 "Protégez Kleesive à tout prix.\n"
 "Nous avons l'avantage.\n"
