--- a/translations/inferno_deal_with_the_devil.tex/fr.po
+++ b/translations/inferno_deal_with_the_devil.tex/fr.po
@@ -703,7 +703,7 @@ msgstr ""
 "    votre Ville Hadès de Kleesive), ou si un Héros Ennemi attaque Kleesive et vous n'êtes pas dans la Ville\n"
 "    de Kleesive, vous êtes immédiatement déplacé à Kleesive, vous perdez le reste de vos Points de Mouvement,\n"
 "    perdez 3 \\svg{gold}, gagnez \\svg{morale_negative}, et défaussez au choix une Carte de votre main.\n"
-"  \\item Les Héros Ennemis n'a que 2 \\svg{movement}. L'Armée Finale se déplace de 4 \\svg{movement}. Elle prends la route la plus\n"
+"  \\item Les Héros Ennemis n'ont que 2 \\svg{movement}. L'Armée Finale se déplace de 4 \\svg{movement}. Elle prends la route la plus\n"
 "    courte vers Kleesive. Si vous possédez une Mine sur une Tuile où elle entre, elle capturera la Mine (mais elle ne va pas\n"
 "    «dévier» pour cela) et continue la route la plus courte vers Kleesive. Elle ignore tout le\n"
 "    reste. Elle utilise aussi les Étables pour le 1 \\svg{movement} bonus.\n"
